Changes in version 0.9.1
  
  New features
    -Max number of threads automatically detected
  
  Bug fixes
    -fixed faulting double crossover logic

Changes in version 0.9.0

  New features
    -added support for autopolyploids
    -added RRBLUP_GCA2
    -randCross2 can now "balance" crossing when not using gender
  
  Bug fixes
    -fixed recombination tracking bug in createDH2
    -removed bug in setEBV with append=TRUE

Changes in version 0.8.2

  Bug fixes
    -fixed ambiguous overloading in optimize.cpp

Changes in version 0.8.1

  Bug fixes
    -setPheno (not setPhenoGCA) passes the number of reps to populations
    -fixed bug in editGenomeTopQtl
    -fixed bug in RRBLUP_D
    -fixed bug in resetPop
    -fixed bug in SimParam_rescaleTraits
    -removed unimplemented SimParam_restrSnpSites and SimParam_restrQtlSites
    -add error message for no traits in calcGCA

Changes in version 0.8.0

  New features
    -added GxE traits with zero environmental variance
    -faster trait scaling
    -faster calculation of genetic values
    -dsyevr now called via arma_fortran
    -added OpenMP support
    -parallelized cross2
    -parallelized runMacs
    -parallelized calculation of genetic values
    -variance calculations now account for inbreeding
    
  Bug fixes
    -fixes for male selection in selectOP

Changes in version 0.7.1
  
  Bug fixes
    -add fixEff to setPhenoGCA

Changes in version 0.7.0

  New features
    -added default runMacs option to return all segSites
    -added ability to specify seperate male and female genetic maps
    -pullGeno and pullHaplo functions can now specifiy chromosomes
    -added RRBLUP2 for special GS cases
    -improved speed by replacing Rcpp random number generators
    -changed available MaCS species
    -$MAJOR CHANGE$ GS functions now use populations directly
    -added pullIbdHaplo
    -added writePlink
    
  Bug fixes
    -fixed population subsetting checks to prevent invalid selections
    -fixed slow calcGCA