@@ -4,6 +4,7 @@ export(RRBLUP)
 export(RRBLUP2)
 export(RRBLUPMemUse)
 export(RRBLUP_D)
+export(RRBLUP_D2)
 export(RRBLUP_GCA)
 export(RRBLUP_GCA2)
 export(RRBLUP_SCA)
