@@ -2,6 +2,8 @@ Changes in version 0.9.1
   
   New features
     -Max number of threads automatically detected
+    -added RRBLUP_D2
+    -added version tracking to SimParam
   
   Bug fixes
     -fixed faulting double crossover logic
